--- a/Source/VehicleDAO/CMakeLists.txt
+++ b/Source/VehicleDAO/CMakeLists.txt
@@ -16,8 +16,12 @@ include_directories(${PROJECT_SOURCE_DIR}/../)
 include_directories(${PROJECT_SOURCE_DIR}/../external/mongo-cxx-driver/include/mongocxx/v_noabi)
 include_directories(${PROJECT_SOURCE_DIR}/../external/mongo-cxx-driver/include/bsoncxx/v_noabi)
 
+# boost directories
+include_directories(${BOOST_INCLUDE_DIR})
+
 # set link directories (must call before add_library, add_executable)
 link_directories(${PROJECT_SOURCE_DIR}/../external/mongo-cxx-driver/lib/${PLATFORM})
+
 
 # define project's build target with project's source files
 add_library(${PROJECT_NAME} SHARED ${SOURCES})
@@ -27,7 +31,4 @@ add_definitions(-DVEHICLEDAO_EXPORTS)
 target_compile_options(${PROJECT_NAME} PRIVATE /utf-8)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE VehicleObjects)
-target_link_libraries(${PROJECT_NAME} PRIVATE pvt.cppan.demo.boost.optional-1.64.0)
-target_link_libraries(${PROJECT_NAME} PRIVATE pvt.cppan.demo.boost.smart_ptr-1.64.0)
-target_link_libraries(${PROJECT_NAME} PRIVATE pvt.cppan.demo.boost.utility-1.64.0)
 target_link_libraries(${PROJECT_NAME} PRIVATE bsoncxx PRIVATE libbsoncxx PRIVATE libmongocxx PRIVATE mongocxx)
