- update unit test project to use Catch framework and can be built by CMake.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -23,3 +23,4 @@ add_subdirectory(VehicleObjects)
 add_subdirectory(VehicleDAO)
 add_subdirectory(VehicleServices)
 add_subdirectory(VehicleWebApp)
+add_subdirectory(VehicleServicesUT)
